kubernetes/spring-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internrampup-deployment
  #namespace: internrampup-deployment
spec:
  selector:
    matchLabels:
      app: internrampup-mysql
  replicas: 1  # a quantidade de pods que vou criar
  template:
    metadata:
      labels:
        app: internrampup-mysql
    spec:
      containers: # definir container
        - name: projectinternrampup # nome de container
          image: projectinternrampup:latest # qual a imagem que quero rodar (posso por a versao na frente se quiser)
          imagePullPolicy: IfNotPresent # por default puxa do docker hub. Com essa config procura local e se nao achar puxa do hub.
          ports:
            - containerPort: 8080
          env:   # Setting Enviornmental Variables
            - name: DB_HOST
              value: mysql
            - name: DB_NAME
              value: projectinternrampup
            - name: DB_USERNAME
              valueFrom:
                secretKeyRef:
                  name: mysecret
                  key: mysql-user
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mysecret
                  key: mysql-password
---

apiVersion: v1
kind: Service
metadata:
  name: internrampup-svc
spec:
  selector:
    app: internrampup-mysql
  ports:
    - protocol: "TCP"
      port: 8080 # The port that the service is running on in the cluster
      targetPort: 8080 # The port exposed by the service
  type: ClusterIP # type of the service.
