kubernetes/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: intern-ingress
spec:
  rules:
  - host: internrampup.com
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
        service:
          name: internrampup-svc
          port:
           number: 8080
